cluster/core/argocd/argocd/resources/argo-cd-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-cd-ui
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    ingress.kubernetes.io/app-root: "/"
    cert-manager.io/cluster-issuer: letsencrypt-dns01-prod
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    gethomepage.dev/description: GitOps Continuous Delivery for Kubernetes
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Network Services
    gethomepage.dev/icon: argocd
    gethomepage.dev/name: Argo CD
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - argo-cd.rockyroad.rocks
    secretName: argo-cd-tls
  rules:
  - host: argo-cd.rockyroad.rocks
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: argocd-server
            port:
              name: http
